--- a/css/index.css
+++ b/css/index.css
@@ -69,32 +69,6 @@ body {
 #settings {
   background-position: -5px 0px; }
 
-#usr {
-  position: relative;
-  padding: 0px;
-  display: none;
-  top: -75px;
-  width: 250px; }
-
-#usr > * {
-  margin-left: 10px;
-  position: relative; }
-
-#usr > #photo {
-  width: 60px;
-  height: 60px;
-  border: 1px solid black; }
-
-#usr label {
-  position: absolute;
-  left: 65px; }
-
-#usr #nick {
-  top: 15px; }
-
-#usr #money {
-  top: 42px; }
-
 #content {
   width: 1000px;
   margin: 0 auto; }
@@ -475,3 +449,23 @@ h3[id^="msg"] {
 h3[id^="err"] {
   display: none;
   font-size: 1.2em; }
+
+#toolbar #usr {
+  top: 10px;
+  width: 250px;
+  padding: 0px;
+  position: absolute;
+  display: none; }
+  #toolbar #usr > * {
+    position: absolute; }
+  #toolbar #usr > .photo {
+    width: 60px;
+    height: 60px;
+    margin-left: 10px;
+    border: 1px solid black; }
+  #toolbar #usr > .nick {
+    top: 22px;
+    margin-left: 78px; }
+  #toolbar #usr > .balance {
+    top: 45px;
+    margin-left: 78px; }
