--- a/src/index.haml
+++ b/src/index.haml
@@ -6,7 +6,7 @@
 
     - @scripts =  %w[jquery jquery.plugins jquery.resloader]
     - @scripts += %w[openpoker/jquery.pp openpoker/jquery.ws]
-    - @scripts += %w[game_preview  player]
+    - @scripts += %w[positions game_preview  player]
     - @scripts += %w[index hall]
 
     - @scripts.each do |i|
