添加对游戏列表中房间名称的支持，并添加游戏携带额上下限额的显示。

--- a/src/index.haml
+++ b/src/index.haml
@@ -62,7 +62,7 @@
                 %th.col_longest 房間
                 %th.col_short   大/小盲注
                 %th.col_short   人數
-                %th.col_short   旁觀
+                %th.col_short   攜帶額
             %tbody
               %tr.autofill
               -# tbody中如果为空，则table只显示表头
@@ -74,7 +74,7 @@
 
           %textarea.template
             %tr
-              %td.type
+              %td.name
               %td.blind
               %td.player
-              %td.waiting
+              %td.limit
