--- a/src/index.scss
+++ b/src/index.scss
@@ -21,89 +21,11 @@ body {
   margin: auto;
   padding-top: 20px;
   margin-top: 15px;
-}
 
-#toolbar {
-  width: 930px;
-  height: 78px;
-  margin: 0px auto;
-  border-radius: 8px;
-  background-color: #436d90;
-  -webkit-box-shadow: 1px 3px 3px black;
-  position: relative;
-}
-
-#logo {
-  margin: -26px auto auto 318px;
-  -webkit-box-shadow: 0px 5px 5px black;
-}
-
-#title{
-  width: 930px;
-  height: 17px;
-  background-color: #365778;
-  border: 0px;
-  -webkit-border-top-left-radius: 8px;
-  -webkit-border-top-right-radius: 8px;
-}
-
-#tools > * {
-  background: url(icon.png);
-  background-repeat: no-repeat;
-  float: left;
-}
-
-.split {
-  width: 5px;
-  height: 55px;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
-#settings, #helps, #logout {
-  width: 55px;
-  height: 55px;
-  padding-top: 54px;
-  text-align: center;
-  color: #ffffff;
-  cursor: pointer;
-}
-
-#helps    { background-position: -60px 0px; }
-#logout   { background-position: -115px 0px; }
-#settings { background-position: -5px 0px; }
-
-#content {
-  width: 1000px;
-  margin: 0 auto;
-}
-
-/* SEATS_TABLE */
-#seats_wrapper {
-  width: 650px;
-  height: 310px;
-  position: absolute;
-  top: 20px;
-  left: 172px;
-  background: url(table.png) no-repeat center;
-}
-
-.seat {
-  position: absolute;
-  width: 60px;
-  height: 88px;
-  font-size: 16px;
-  padding: 0px;
-  margin: 0px;
-  border: 0px;
-}
-
-.seat .photo {
-  width: 60px;
-  height: 60px;
-}
-
-#hall_commands {
+  #content {
+    width: 1000px;
+    margin: 0 auto;
+  }
 }
 
 .blockMsg {
@@ -126,127 +48,12 @@ body {
   text-shadow: 1px 1px 1px #929da7;
 }
 
-/* @group Reset */
-
-.fht-table,
-.fht-table thead,
-.fht-table tfoot,
-.fht-table tbody,
-.fht-table tr,
-.fht-table th,
-.fht-table td {
-  margin: 0;
-  padding: 0;
-
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-.fht-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-/* @end */
-
-/* @group Content */
-
-div.fht-table-wrapper {
-  overflow: hidden;
-}
-
-div.fht-tbody {
-  overflow-y: auto;
-  overflow-x: auto;
-}
-
-.fht-table .fht-cell {
-  overflow: hidden;
-  height: 1px;
-}
-
-/* @end */
-
-/* GAME_TABLE */
-
-.col_longest {
-  width: 150px;
-}
-
-.col_short {
-  width: 90px;
-}
-
-.seat > .inplay,
-.seat > .nick {
-  color: white;
-  text-align: center;
-}
-
-.seat > .photo {
-  -webkit-box-shadow: 1px 3px 3px black;
-}
-
-.selected {
-  background-color: #bab1c6 !important;
-}
-
-button {
-  font-family: 'Microsoft Yahei','simhei',sans-serif;
-}
-
-
 .cmdred {
   background-position: 138px 0px;
 }
 
 .cmdblue {
   background-position: 276px 0px;
-}
-
-#cmd_watch{
-}
-
-#game {
-  width: 1000px;
-  position: absolute;
-}
-
-#game > #table {
-  position: absolute;
-  top: 100px;
-  left: 125px;
-}
-
-#game_commands {
-  position: absolute;
-  top: 550px;
-  left: 125px;
-}
-
-.button {
-  background-image: url(button.png);
-  display: block;
-  width: 70px;
-  height: 30px;
-  padding: 0px;
-  margin: 0px;
-  border: 0px;
-  color: white;
-  font-size: 13px;
-  float: left;
-  padding-top: 16px;
-  padding-left: 48px;
-  background-repeat: no-repeat;
-  cursor: pointer;
-  margin-left: 10px;
-}
-
-#room_commands {
-  position: absolute;
-  top: 500px;
-  left: 825px;
 }
 
 .game_seat {
@@ -328,9 +135,6 @@ button {
   left: 60px;
 }
 
-#game_table {
-}
-
 .bet_label, .pot_label {
   background-color: #77B73E;
   position: absolute;
@@ -358,12 +162,6 @@ button {
   z-index: 50;
   border-radius: 4px;
   -webkit-box-shadow: 1px 1px 5px black;
-}
-
-.share_card {
-}
-
-.private_card {
 }
 
 .bet, .pot {
@@ -415,25 +213,6 @@ button {
   left: 370px;
 }
 
-#raise_range {
-  position: absolute;
-  left: 520px;
-  top: 32px;
-}
-
-#raise_number {
-  position: absolute;
-  left: 525px;
-  top: 5px;
-  width: 118px;
-  height: 22px;
-  font-size: 15px;
-}
-
-.disabled {
-  opacity: 0.7;
-}
-
 #winner {
   background-image: url('winner.png');
   width: 64px;
@@ -443,32 +222,6 @@ button {
   top: -35px;
   left: -20px;
 }
-
-.buyin {
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 @mixin auto-hide {
   display: none;
@@ -495,16 +248,149 @@ button {
   font-size: 1.5em;
 }
 
-#tools {
-  @include auto-hide;
-  top: 5px;
-  left: 710px;
-  width: 215px;
-  padding: 0px;
-  position: absolute;
+
+button {
+  width: 80px;
+  height: 30px;
+  @include m-font;
+  font-family: 'Microsoft Yahei','simhei',sans-serif;
 }
 
-#hall {
+label {
+  @include s-font;
+}
+
+h3[id^="msg"] {
+  @include auto-hide;
+  @include m-font;
+}
+
+h3[id^="err"] {
+  @include auto-hide;
+  @include m-font;
+}
+
+.template {
+  @include auto-hide;
+}
+
+#singin {
+  @include auto-hide;
+  @include top-bottom-margin;
+
+  form {
+    height: 120px; 
+    font-size: 1.2em; 
+
+    > input {
+      width: 200px; 
+      height: 20px; 
+    }
+
+    > div {
+      > #ckb_save {
+        @include auto-margin;
+      }
+
+      > #lab_err_singin {
+        @include auto-hide;
+      }
+    }
+  }
+}
+
+// TOOLBAR {{{
+#toolbar {
+  width: 930px;
+  height: 78px;
+  margin: 0px auto;
+  border-radius: 8px;
+  background-color: #436d90;
+  -webkit-box-shadow: 1px 3px 3px black;
+  position: relative;
+
+  #logo {
+    margin: -26px auto auto 318px;
+    -webkit-box-shadow: 0px 5px 5px black;
+  }
+
+  #title{
+    width: 930px;
+    height: 17px;
+    background-color: #365778;
+    border: 0px;
+    -webkit-border-top-left-radius: 8px;
+    -webkit-border-top-right-radius: 8px;
+  }
+
+  #tools {
+    @include auto-hide;
+    top: 5px;
+    left: 710px;
+    width: 215px;
+    padding: 0px;
+    position: absolute;
+
+    > * {
+      background: url(icon.png);
+      background-repeat: no-repeat;
+      float: left;
+    }
+
+    .split {
+      width: 5px;
+      height: 55px;
+      margin-left: 10px;
+      margin-right: 10px;
+    }
+
+    #settings, #helps, #logout {
+      width: 55px;
+      height: 55px;
+      padding-top: 54px;
+      text-align: center;
+      color: #ffffff;
+      cursor: pointer;
+    }
+
+    #helps    { background-position: -60px 0px; }
+    #logout   { background-position: -115px 0px; }
+    #settings { background-position: -5px 0px; }
+  }
+
+  #player {
+    top: 10px;
+    width: 250px;
+    padding: 0px;
+    position: absolute; 
+    @include auto-hide;
+
+    > * {
+      position: absolute;
+    }
+
+    > .photo {
+      width: 60px;
+      height: 60px;
+      margin-left: 10px;
+      border: 1px solid black;
+    }
+
+    > .nick {
+      top: 22px;
+      margin-left: 78px;
+    }
+
+    > .balance {
+      top: 45px;
+      margin-left: 78px;
+    }
+  }
+}
+// @TOOLBAR }}}
+
+// HALL {{{
+#hall { 
   @include auto-hide;
   position: absolute;
 
@@ -555,83 +441,19 @@ button {
   .autofill {
     height: auto;
   }
-}
 
-button {
-  @include m-font;
-  width: 80px;
-  height: 30px;
-}
-
-label {
-  @include s-font;
-}
-
-#singin {
-  @include auto-hide;
-  @include top-bottom-margin;
-
-  form {
-    height: 120px; 
-    font-size: 1.2em; 
-
-    > input {
-      width: 200px; 
-      height: 20px; 
-    }
-
-    > div {
-      > #ckb_save {
-        @include auto-margin;
-      }
-
-      > #lab_err_singin {
-        @include auto-hide;
-      }
-    }
+  .col_longest {
+    width: 150px;
   }
-}
 
-h3[id^="msg"] {
-  @include auto-hide;
-  @include m-font;
-  /*background: #0F263D url('ajax-loader.gif') no-repeat;*/
-}
-
-h3[id^="err"] {
-  @include auto-hide;
-  @include m-font;
-}
-
-#toolbar {
-  #player {
-    top: 10px;
-    width: 250px;
-    padding: 0px;
-    position: absolute; 
-    @include auto-hide;
-
-    > * {
-      position: absolute;
-    }
-
-    > .photo {
-      width: 60px;
-      height: 60px;
-      margin-left: 10px;
-      border: 1px solid black;
-    }
-
-    > .nick {
-      top: 22px;
-      margin-left: 78px;
-    }
-
-    > .balance {
-      top: 45px;
-      margin-left: 78px;
-    }
+  .col_short {
+    width: 90px;
   }
+
+
+.selected {
+  background-color: #bab1c6 !important;
+}
 }
 
 /* GAME PREVIEW */
@@ -642,8 +464,86 @@ h3[id^="err"] {
   height: 310px;
   background: url(table.png) no-repeat center;
   position: absolute;
-}
 
-.template {
+  .seat {
+    width: 60px;
+    height: 88px;
+    border: 0px;
+    margin: 0px;
+    padding: 0px;
+    position: absolute;
+    font-size: 16px;
+
+    > .photo {
+      width: 60px;
+      height: 60px;
+      -webkit-box-shadow: 1px 3px 3px black;
+    }
+
+    > .inplay, .nick {
+      color: white;
+      text-align: center;
+    }
+  }
+} 
+// @HALL }}}
+
+// GAME {{{
+#game { 
   @include auto-hide;
+  width: 1000px;
+  position: absolute;
+
+  .background {
+    top: 80px;
+    left: 120px;
+    position: absolute;
+  }
+
+  .disable {
+    opacity: 0.4 !important;
+    cursor: not-allowed !important;
+    color: rgba(255,255,255,0.4) !important;
+  }
+
+  .tips {
+    @include auto-hide;
+  }
+
+  .actions {
+    top: 550px;
+    left: 125px;
+    position: absolute;
+  }
+
+  .action{
+    @include s-font;
+    width: 70px;
+    height: 30px;
+    border: 0px;
+    float: left;
+    color: white;
+    display: block;
+    cursor: pointer;
+    margin: 0px 10px 0px 0px;
+    padding: 16px 0px 0px 48px;
+    background: url(button.png) no-repeat;
+  }
+
+  #raise_range {
+    position: absolute;
+    left: 520px;
+    top: 32px;
+  }
+
+  #raise_number {
+    position: absolute;
+    left: 525px;
+    top: 5px;
+    width: 118px;
+    height: 22px;
+    font-size: 15px;
+  }
 }
+// @GAME }}}
+// vim: fdm=marker
