--- a/src/index.haml
+++ b/src/index.haml
@@ -4,10 +4,10 @@
     %meta{:charset => "utf-8"}
     %title 創世紀-德州撲克
 
-    - @scripts =  %w[jquery jquery.plugins jquery.resloader]
-    - @scripts += %w[openpoker/jquery.pp openpoker/jquery.ws]
-    - @scripts += %w[header positions game_preview  player game]
-    - @scripts += %w[index hall]
+    - @scripts = %w[jquery/jquery header positions]
+    - @scripts += %w[base64 blockUI resloader timers tools].map do |x| "jquery/jquery.#{x}" end
+    - @scripts += %w[prototype websocket].map do |x| "plugins/#{x}" end
+    - @scripts += %w[player game game_preview hall index]
 
     - @scripts.each do |i|
       %script{:src => "js/#{i}.js", :type => 'text/javascript'}
