添加对EmptySeat的支持

--- a/css/index.css
+++ b/css/index.css
@@ -62,23 +62,6 @@ body {
 .actor_seat {
   -webkit-box-shadow: 0px 0px 6px 6px silver; }
 
-.empty_seat {
-  position: absolute;
-  width: 84px;
-  height: 84px;
-  font-size: 18px;
-  padding: 0px;
-  margin: 0px;
-  border: 0px;
-  text-align: center;
-  border: 0px solid #000000;
-  background-image: url(sit.png);
-  background-repeat: no-repeat;
-  color: gray;
-  padding-top: 30px;
-  cursor: pointer;
-  display: none; }
-
 .game_seat > .photo {
   padding: 0px;
   margin: 0px;
@@ -371,8 +354,8 @@ h3[id^="err"] {
   width: 1000px;
   position: absolute; }
   #game .table {
-    top: 80px;
-    left: 120px;
+    top: 100px;
+    left: 125px;
     width: 748px;
     height: 377px;
     position: absolute;
@@ -410,3 +393,14 @@ h3[id^="err"] {
     width: 118px;
     height: 22px;
     font-size: 15px; }
+  #game > .empty_seat {
+    width: 84px;
+    height: 84px;
+    border: 0px;
+    margin: 0px;
+    padding: 30px 0px 0px 0px;
+    text-align: center;
+    background: url(sit.png) no-repeat;
+    color: gray;
+    cursor: pointer;
+    position: absolute; }
