添加对PlayingSeat的显示支持

--- a/src/index.haml
+++ b/src/index.haml
@@ -95,3 +95,6 @@
             .seat
             .empty_seat 觀戰
             .playing_seat
+              %label.nick
+              %img.photo
+              %label.inplay
