--- a/css/index.css
+++ b/css/index.css
@@ -47,55 +47,8 @@ body {
 .cmdblue {
   background-position: 276px 0px; }
 
-.game_seat {
-  position: absolute;
-  width: 84px;
-  height: 120px;
-  font-size: 14px;
-  padding: 0px;
-  margin: 0px;
-  border: 0px;
-  text-align: center;
-  z-index: 500;
-  border-radius: 3px; }
-
 .actor_seat {
   -webkit-box-shadow: 0px 0px 6px 6px silver; }
-
-.game_seat > .photo {
-  padding: 0px;
-  margin: 0px;
-  width: 82px;
-  height: 80px;
-  border: 1px solid gray; }
-
-.game_seat > .nick {
-  padding: 0px;
-  margin: 0px;
-  width: 82px;
-  height: 18px;
-  background-color: #485465;
-  opacity: 0.7;
-  border-top-left-radius: 7px;
-  border-top-right-radius: 7px;
-  color: white;
-  padding-top: 3px;
-  border: 1px solid gray;
-  border-bottom: 0px; }
-
-.game_seat > .inplay {
-  padding: 0px;
-  margin: 0px;
-  width: 82px;
-  height: 16px;
-  background-color: #485465;
-  margin-top: -4px;
-  opacity: 0.7;
-  border-bottom-left-radius: 7px;
-  border-bottom-right-radius: 7px;
-  color: white;
-  border: 1px solid gray;
-  border-top: 0px; }
 
 .dealer {
   position: absolute;
@@ -404,3 +357,46 @@ h3[id^="err"] {
     color: gray;
     cursor: pointer;
     position: absolute; }
+  #game > .playing_seat {
+    width: 84px;
+    height: 120px;
+    border: 0px;
+    margin: 0px;
+    padding: 0px;
+    border-radius: 3px;
+    text-align: center;
+    position: absolute; }
+    #game > .playing_seat .photo {
+      padding: 0px;
+      margin: 0px;
+      width: 82px;
+      height: 80px;
+      border: 1px solid gray; }
+    #game > .playing_seat .nick {
+      padding: 0px;
+      margin: 0px;
+      width: 82px;
+      height: 18px;
+      background-color: #485465;
+      opacity: 0.7;
+      border-top-left-radius: 7px;
+      border-top-right-radius: 7px;
+      color: white;
+      padding-top: 3px;
+      border: 1px solid gray;
+      border-bottom: 0px;
+      display: block; }
+    #game > .playing_seat .inplay {
+      padding: 0px;
+      margin: 0px;
+      width: 82px;
+      height: 16px;
+      background-color: #485465;
+      margin-top: -4px;
+      opacity: 0.7;
+      border-bottom-left-radius: 7px;
+      border-bottom-right-radius: 7px;
+      color: white;
+      border: 1px solid gray;
+      border-top: 0px;
+      display: block; }
