--- a/src/index.scss
+++ b/src/index.scss
@@ -60,12 +60,6 @@ body {
   -webkit-box-shadow: 0px 0px 6px 6px silver;
 }
 
-.dealer {
-  position: absolute;
-  top: 70px;
-  left: 60px;
-}
-
 .bet_label, .pot_label {
   background-color: #77B73E;
   position: absolute;
@@ -469,12 +463,21 @@ h3[id^="err"] {
   }
 
   #raise_number {
-    position: absolute;
-    left: 525px;
     top: 5px;
+    left: 525px;
     width: 118px;
     height: 22px;
     font-size: 15px;
+    position: absolute;
+  }
+
+  #dealer {
+    top: 70px;
+    left: 60px;
+    width: 28px;
+    height: 36px;
+    position: absolute;
+    background: url(dealer.png) no-repeat;
   }
 
   > .empty_seat {
