--- a/css/index.css
+++ b/css/index.css
@@ -341,7 +341,7 @@ h3[id^="err"] {
     height: 22px;
     font-size: 15px;
     position: absolute; }
-  #game #dealer {
+  #game .dealer {
     top: 70px;
     left: 60px;
     width: 28px;
