--- a/css/index.css
+++ b/css/index.css
@@ -348,6 +348,13 @@ h3[id^="err"] {
     height: 36px;
     position: absolute;
     background: url(dealer.png) no-repeat; }
+  #game .bet {
+    width: 13px;
+    z-index: 1;
+    position: absolute;
+    -webkit-transition-property: all;
+    -webkit-transition-duration: 1s;
+    -webkit-transition-delay: 0s; }
   #game > .empty_seat {
     width: 84px;
     height: 84px;
@@ -365,6 +372,7 @@ h3[id^="err"] {
     border: 0px;
     margin: 0px;
     padding: 0px;
+    z-index: 3;
     border-radius: 3px;
     text-align: center;
     position: absolute; }
