--- a/src/index.scss
+++ b/src/index.scss
@@ -480,6 +480,15 @@ h3[id^="err"] {
     background: url(dealer.png) no-repeat;
   }
 
+  .bet {
+    width: 13px;
+    z-index: 1;
+    position: absolute;
+    -webkit-transition-property: all;
+    -webkit-transition-duration: 1s;
+    -webkit-transition-delay: 0s;
+  }
+
   > .empty_seat {
     width: 84px;
     height: 84px;
@@ -499,6 +508,7 @@ h3[id^="err"] {
     border: 0px;
     margin: 0px;
     padding: 0px;
+    z-index: 3;
     border-radius: 3px;
     text-align: center;
     position: absolute;
