--- a/src/index.scss
+++ b/src/index.scss
@@ -480,13 +480,12 @@ h3[id^="err"] {
     background: url(dealer.png) no-repeat;
   }
 
-  .bet {
+  .bet, .pot {
     width: 13px;
-    z-index: 5;
+    z-index: 1;
     position: absolute;
     -webkit-transition-property: all;
     -webkit-transition-duration: 1s;
-    -webkit-transition-delay: 0s;
   }
 
   > .empty_seat {
