添加对DRAW协议的支持

--- a/src/index.haml
+++ b/src/index.haml
@@ -98,4 +98,5 @@
               %label.nick
               %img.photo
               %label.inplay
+              %img.draw_card{:src => 'css/poker_back.png'}
             .dealer
