--- a/css/index.css
+++ b/css/index.css
@@ -409,3 +409,10 @@ h3[id^="err"] {
       border: 1px solid gray;
       border-top: 0px;
       display: block; }
+    #game > .playing_seat .draw_card {
+      top: 50px;
+      left: 50px;
+      width: 41px;
+      height: 41px;
+      display: none;
+      position: absolute; }
