--- a/src/index.scss
+++ b/src/index.scss
@@ -56,9 +56,6 @@ body {
   background-position: 276px 0px;
 }
 
-.actor_seat {
-  -webkit-box-shadow: 0px 0px 6px 6px silver;
-}
 
 .bet_label, .pot_label {
   background-color: #77B73E;
@@ -88,21 +85,6 @@ body {
 
 .ps_fold {
   opacity: 0.75;
-}
-
-.timer {
-  width: 6px;
-  position: absolute;
-  top: 0px;
-  left: -7px;
-  border-radius: 4px;
-  border: 1px solid gray;
-}
-
-.timer > div {
-  background-color: red;
-  height: 120px;
-  border-radius: 4px;
 }
 
 .rank_label {
@@ -501,6 +483,10 @@ h3[id^="err"] {
     position: absolute;
   }
 
+  > .actor_seat {
+   -webkit-box-shadow: 0px 0px 6px 6px silver;
+  }
+
   > .playing_seat {
     width: 84px;
     height: 120px;
@@ -560,6 +546,30 @@ h3[id^="err"] {
       @include auto-hide;
       position: absolute;
     }
+
+    .actor_timer {
+      top: 0px;
+      left: -8px;
+      width: 7px;
+      height: 120px;
+      border-top-left-radius: 4px;
+      border-top-right-radius: 4px;
+      border: 1px solid gray;
+      position: absolute;
+      overflow: hidden;
+
+      div {
+        width: 7px;
+        height: 130px;
+        background: -webkit-gradient(linear, 0 0, 0 40%, from(red), to(yellow));
+        border-radius: 4px;
+
+        -webkit-transition-property: all;
+        -webkit-transition-duration: 14s;
+        -webkit-transition-timing-function: ease-in;
+      }
+    }
+
   }
 }
 // @GAME }}}
