--- a/src/index.scss
+++ b/src/index.scss
@@ -429,7 +429,7 @@ h3[id^="err"] {
     background: url(button.png) no-repeat;
   }
 
-  .card {
+  .card, .private_card {
     z-index: 1;
     width: 45px;
     height: 65px;
@@ -487,6 +487,7 @@ h3[id^="err"] {
    -webkit-box-shadow: 0px 0px 6px 6px silver;
   }
 
+  // {{{ Playing Seat
   > .playing_seat {
     width: 84px;
     height: 120px;
@@ -539,8 +540,6 @@ h3[id^="err"] {
     }
 
     .draw_card {
-      top: 50px;
-      left: 50px;
       width: 41px;
       height: 41px;
       @include auto-hide;
@@ -569,7 +568,7 @@ h3[id^="err"] {
         -webkit-transition-timing-function: ease-in;
       }
     }
-
+    // }}}
   }
 }
 // @GAME }}}
