添加对GROWLUI的支持，并修正原有BLOCKUI的样式表

--- a/css/index.css
+++ b/css/index.css
@@ -23,24 +23,6 @@ body {
     width: 1000px;
     margin: 0 auto; }
 
-.blockMsg {
-  border-radius: 8px !important;
-  border: 3px solid #174f75 !important;
-  background-color: #0f263d !important;
-  color: #ffffff !important;
-  text-shadow: 1px 1px 1px #929da7 !important;
-  margin: 0px auto !important;
-  width: 400px !important;
-  -webkit-box-shadow: 2px 2px 2px black;
-  left: 0px !important;
-  right: 0px !important;
-  top: 260px !important; }
-
-.msg {
-  padding: 0px;
-  color: #ffffff;
-  text-shadow: 1px 1px 1px #929da7; }
-
 .cmdred {
   background-position: 138px 0px; }
 
@@ -62,14 +44,6 @@ body {
 .background_card {
   position: absolute;
   z-index: 50; }
-
-.bet, .pot {
-  position: absolute;
-  width: 13px;
-  z-index: 100; }
-
-.ps_fold {
-  opacity: 0.75; }
 
 .rank_label {
   top: 447px;
@@ -136,6 +110,15 @@ h3[id^="err"] {
       margin-top: 20px; }
     #singin form > div > #lab_err_singin {
       display: none; }
+
+/*div.growlUI { background: url(check48.png) no-repeat 10px 10px }*/
+div.growlUI {
+  display: none; }
+
+div.growlUI h1, div.growlUI h2 {
+  color: white;
+  padding: 5px 5px 5px 75px;
+  text-align: left; }
 
 #toolbar {
   width: 930px;
