--- a/src/index.haml
+++ b/src/index.haml
@@ -15,6 +15,7 @@
     %link{:href => 'css/index.css', :rel => 'stylesheet', :type => 'text/css'}
   %body
     #page
+      #tips_empty.growlUI 测试提示消息
       %h3#msg_connect 連線中...
       %h3#msg_loading 加載中...
       %h3#msg_joining 進入中...
