--- a/src/index.haml
+++ b/src/index.haml
@@ -15,7 +15,7 @@
     %link{:href => 'css/index.css', :rel => 'stylesheet', :type => 'text/css'}
   %body
     #page
-      #tips_empty.growlUI 测试提示消息
+      #tips_empty.growlUI 請等待其他玩家的加入
       %h3#msg_connect 連線中...
       %h3#msg_loading 加載中...
       %h3#msg_joining 進入中...
