--- a/src/index.scss
+++ b/src/index.scss
@@ -136,6 +136,11 @@ h3[id^="err"] {
   @include m-font;
 }
 
+div[id^="err"] {
+  @include auto-hide;
+  @include m-font;
+}
+
 .template {
   @include auto-hide;
 }
