--- a/css/index.css
+++ b/css/index.css
@@ -93,6 +93,10 @@ h3[id^="err"] {
   display: none;
   font-size: 1.2em; }
 
+div[id^="err"] {
+  display: none;
+  font-size: 1.2em; }
+
 .template {
   display: none; }
 
